Makes use of nom-tam-fits 1.21.2